Library/AXL(Library)/Visual Basic/AXDev.bas


' Setting up confirmes the register besides within the Module by DWord.
Public Declare Function AxmModuleWriteDWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModulePos As Long, ByVal wOffset As Long, ByVal dwData As Long) As Long
Public Declare Function AxmModuleReadDWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModulePos As Long, ByVal wOffset As Long, ByRef dwData As Long) As Long


' Set EXCNT (Pos = Unit)
Public Declare Function AxmStatusSetActComparatorPos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double) As Long
' Return EXCNT (Positon = Unit)
Public Declare Function AxmStatusGetActComparatorPos Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpPos As Double) As Long

' Set INCNT (Pos = Unit)
Public Declare Function AxmStatusSetCmdComparatorPos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double) As Long
' Return INCNT (Pos = Unit)
Public Declare Function AxmStatusGetCmdComparatorPos Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpPos As Double) As Long


'=========== Append function. =========================================================================================================
' 	Increase a straight line interpolation at speed to the infinity.
' 	Must put the distance speed rate.
Public Declare Function AxmLineMoveVel Lib "AXL.dll" (ByVal lCoord As Long, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Long

'========= Sensor drive API( Read carefully: Available only PI , No function in QI) =========================================================================
'	 Set mark signal( used in sensor positioning drive)
Public Declare Function AxmSensorSetSignal Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uLevel As Long) As Long
'	 Verify mark signal( used in sensor positioning drive)
Public Declare Function AxmSensorGetSignal Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upLevel As Long) As Long
'	Verify mark signal( used in sensor positioning drive)state
Public Declare Function AxmSensorReadSignal Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long

' Drive API which moves from edge detection of sensor input pin during velocity mode driving as much as specified position, then stop.
' Applied motion is started upon the start of API, and escapes from the API after the motion is completed.
Public Declare Function AxmSensorMovePos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lMethod As Long) As Long

' Drive API which moves from edge detection of sensor input pin during velocity mode driving as much as specified position, then stop.
' Applied motion is started upon the start of API, then escapes from the API immediately without waiting until the motion is completed.
Public Declare Function AxmSensorStartMovePos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lMethod As Long) As Long


' Return record of origin search progress step.
' *lpStepCount      : Number of step(Be recorded)
' *upMainStepNumber : Array point of 'MainStepNumber ' information(Be recorded)
' *upStepNumber     : Array point of 'StepNumber ' information(Be recorded)
' *upStepBranch     : Array point of branch information by step(Be recorded)
'  Caution : Number of array should be fixed 50.
Public Declare Function AxmHomeGetStepTrace Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef lpStepCount As Long, ByRef upMainStepNumber As Long, ByRef upStepNumber As Long, ByRef upStepBranch As Long) As Long

'======= Additive home search (Applicable to PI-N804/404  only) =================================================================================

' Set home setting parameters of axis specified by user. (Use exclusive-use register for QI chip).
' uZphasCount : Z phase count after home completion. (0 - 15)
' lHomeMode   : Home setting mode( 0 - 12)
' lClearSet   : Select use of position clear and remaining pulse clear (0 - 3)
'               0: No use of position clear, no use of remaining pulse clear
'               1: use of position clear, no use of remaining pulse clear
'               2: No use of position clear, use of remaining pulse clear
'               3: use of position clear, use of remaining pulse clear
' dOrgVel : Set Org  Speed related home
' dLastVel: Set Last Speed related home
Public Declare Function AxmHomeSetConfig Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uZphasCount As Long, ByVal lHomeMode As Long, ByVal lClearSet As Long, ByVal dOrgVel As Double, ByVal dLastVel As Double, ByVal dLeavePos As Double) As Long
' Return home setting parameters of axis specified by user.
Public Declare Function AxmHomeGetConfig Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upZphasCount As Long, ByRef lpHomeMode As Long, ByRef lpClearSet As Long, ByRef dpOrgVel As Double, ByRef dpLastVel As Double, ByRef dpLeavePos As Double) As Long

' Start home search of axis specified by user
' Set when use lHomeMode : Set 0 - 5 (Start search after Move Return.)
' If lHomeMode -1is used as it is, the setting is done as used in HomeConfig.
' Move direction      : CW when Vel value is positive, CCW when negative.
Public Declare Function AxmHomeSetMoveSearch Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Long

' Start home return of axis specified by user.
' Set when lHomeMode is used: set 0 - 12
' If lHomeMode -1is used as it is, the setting is done as used in HomeConfig.
' Move direction      : CW when Vel value is positive, CCW when negative.
Public Declare Function AxmHomeSetMoveReturn Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Long

'Home separation of axis specified by user is started.
'Move direction      : CW when Vel value is positive, CCW when negative.
Public Declare Function AxmHomeSetMoveLeave Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Long

' User start home search of multi-axis specified by user.
' Set when use lHomeMode : Set 0 - 5 (Start search after Move Return.)
' If lHomeMode -1is used as it is, the setting is done as used in HomeConfig.
' Move direction      : CW when Vel value is positive, CCW when negative.
Public Declare Function AxmHomeSetMultiMoveSearch Lib "AXL.dll" (ByVal lArraySize As Long, ByRef lpAxesNo As Long, ByRef dpVel As Double, ByRef dpAccel As Double, ByRef dpDecel As Double) As Long


' Set move velocity profile mode of specific coordinate system.
'  (caution : Available to use only after axis mapping)
' ProfileMode : '0' - symmetry Trapezoid
'               '1' - asymmetric Trapezoid
'               '2' - symmetry Quasi-S Curve
'               '3' - symmetry S Curve
'               '4' - asymmetric S Curve
Public Declare Function AxmContiSetProfileMode Lib "AXL.dll" (ByVal lCoord As Long, ByVal uProfileMode As Long) As Long
' Return move velocity profile mode of specific coordinate system.
Public Declare Function AxmContiGetProfileMode Lib "AXL.dll" (ByVal lCoord As Long, ByRef upProfileMode As Long) As Long

' ========== Reading group for input interrupt occurrence flag
'  Reading the interrupt occurrence state by bit unit in specified input contact module and Offset position of Interrupt Flag Register
Public Declare Function AxdiInterruptFlagReadBit Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByRef upValue As Long) As Long
' Reading the interrupt occurrence state by byte unit in specified input contact module and Offset position of Interrupt Flag Register
Public Declare Function AxdiInterruptFlagReadByte Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByRef upValue As Long) As Long
' Reading the interrupt occurrence state by word unit in specified input contact module and Offset position of Interrupt Flag Register
Public Declare Function AxdiInterruptFlagReadWord Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByRef upValue As Long) As Long
' Reading the interrupt occurrence state by double word unit in specified input contact module and Offset position of Interrupt Flag Register
Public Declare Function AxdiInterruptFlagReadDword Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByRef upValue As Long) As Long
' Reading the interrupt occurrence state by bit unit in entire input contact module and Offset position of Interrupt Flag Register
Public Declare Function AxdiInterruptFlagRead Lib "AXL.dll" (ByVal lOffset As Long, ByRef upValue As Long) As Long


' ========= API related log ==========================================================================================
' This API sets or resets in order to monitor the API execution result of set axis in EzSpy.
' uUse : use or not use => DISABLE(0), ENABLE(1)
Public Declare Function AxmLogSetAxis Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uUse As Long) As Long


' This API verifies if the API execution result of set axis is monitored in EzSpy.
Public Declare Function AxmLogGetAxis Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upUse As Long) As Long

'==Log

' Set whether to log output to EzSpy of specified input channel
Public Declare Function AxaiLogSetChannel Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal uUse As Long) As Long
' Verify whether to log output to EzSpy of specified input channel
Public Declare Function AxaiLogGetChannel Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef upUse As Long) As Long


' Set whether to log output in EzSpy of specified output channel
Public Declare Function AxaoLogSetChannel Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal uUse As Long) As Long
' Verify whether log output is done in EzSpy of specified output channel.
Public Declare Function AxaoLogGetChannel Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef upUse As Long) As Long

' Set whether execute log output on EzSpy of specified module
Public Declare Function AxdLogSetModule Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal uUse As Long) As Long
' Verify whether execute log output on EzSpy of specified module
Public Declare Function AxdLogGetModule Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef upUse As Long) As Long
